@@ -66,6 +66,7 @@ CHANGELOG Roundcube Webmail
 - Fix bug where creating subfolders in shared folders wasn't possible without ACL extension (#1490113)
 - Fix reply scrolling issue with text mode and start message below the quote (#1490114)
 - Fix possible issues in skin/skin_path config handling (#1490125)
+- Fix lack of delimiter for recipient addresses in smtp_log (#1490150)
 
 RELEASE 1.0.3
 -------------
